daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N15_bad_ml_dsa_signature/auth_block.cbor.hex
a30081a200584011f3322ad775dd273a9f9325e571dc4a568c5e4f84b045f9c4bf5b1166111c283b7fe04f5a351da6b669c550a187493963ea136efeeeafaa95f8bbe28d263ae3014d6261642d7369676e617475726501f602f6
